--- a/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.html
+++ b/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.html
@@ -1,47 +1,47 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header" data-background-color="darkblue">
-
-                        <table width=100%;>
-                            <tr>
-                                <td>
-                                    <h4 class="title">Sorting List</h4>
-                                    <p class="category">Manage your Sorting List</p>
-                                </td>
-                                <td style="text-align: right;">
-                                    <button (click)="onEditconf(0)" class="btn btn-danger">Add New</button>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div *ngIf="configlist!=null && configlist!=undefined" class="card-content table-responsive table-mobile">
-                        <table class="table" width=100%;>
-                            <thead class="text-info">
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Type </th>
-                                    <th>Order</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let conf of configlist">
-                                    <td data-title="Name">{{conf.Name}}</td>
-                                    <td data-title="Type">{{conf.stype}}</td>
-                                    <td data-title="Order">{{conf.sorder}}</td>
-
-                                    <td class="btnalign" style="cursor: pointer;">
-                                        <button (click)="onEditconf(conf.id)" class="btn btn-default">Edit</button>
-                                        <button (click)="openDialog(conf.id)" class="btn btn-danger">Delete</button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <hr>
-
+            <div class="custom-container">
+                <div class="custom-inner-container">
+                    <h5>Sorting List
+                        <small>Manage your Sorting List</small>
+                        <button class="header-button" (click)="onEditconf(0)">Add New</button>
+                    </h5>
+                    <!-- <div class="record-count-section">
+                        <label>
+                            Search: 
+                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText"/>
+                        </label>
+                    </div> -->
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div *ngIf="configlist!=null && configlist!=undefined"
+                                class="card-content table-responsive table-mobile">
+                                <table class="table" width=100%;>
+                                    <thead class="text-info">
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Type </th>
+                                            <th>Order</th>
+                                            <th style="text-align: center;">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let conf of configlist">
+                                            <td>{{conf.Name}}</td>
+                                            <td>{{conf.stype}}</td>
+                                            <td>{{conf.sorder}}</td>
+                                            <td class="font-20" align="center">
+                                                <button (click)="onEditconf(conf.id)"
+                                                  class="btn-icon"><i class="fa fa-pencil"></i></button>
+                                                <button (click)="openDialog(conf.id)"
+                                                  class="btn-icon"><i class="fa fa-trash"></i></button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
