--- a/AdminPortal/src/app/productdetails/productlist.component.css
+++ b/AdminPortal/src/app/productdetails/productlist.component.css
@@ -1,4 +1,4 @@
-.custom-table{
+/* .custom-table{
     width: 100%;
     text-align: center;
     border-collapse: separate;
@@ -20,5 +20,5 @@
 }
 .bulk-file-btn{
     width: 230px;
-}
+} */
 
