--- a/AdminPortal/src/app/user-add/user-add.component.html
+++ b/AdminPortal/src/app/user-add/user-add.component.html
@@ -69,8 +69,7 @@
                 <div class="row">
                   <div class="col-md-4">
                     <label class="control-label" *ngIf="userType == 'Admin'">Project</label>
-                    <div class="form-group form-black label-floating"
-                      [ngClass]="{'is-empty': user.ProjectTypeID==undefined,'is-focused' :user.ProjectTypeID!=undefined}">
+                    <div class="form-group form-black label-floating">
                       <select *ngIf="id == 0" class="form-select" aria-label="Select Project"
                         [(ngModel)]="user.ProjectTypeID" name="ProjectTypeID" required>
                         <option selected>Select Project</option>
