--- a/AdminPortal/src/app/user-management/process-config/process-config.component.html
+++ b/AdminPortal/src/app/user-management/process-config/process-config.component.html
@@ -12,112 +12,138 @@
                                 <div class="row">
                                     <input type="text" name="MemRefNo" #UserID="ngModel"
                                         [(ngModel)]="schedulerData.MemRefNo" style="display:none;">
-                                    <div class="col-md-3">
-                                        <h4>Full Data Migration</h4>
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Select Time</mat-label>
-                                            <mat-select name="SchedulerTime1" [disabled]=isdesable
-                                                [(ngModel)]="schedulerData.SchedulerTime1">
-                                                <mat-option *ngFor="let food of foods" [value]="food">
-                                                    {{food}}
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <br />
 
-                                        <button class="custom-btn" style="margin-right: 110px;" type="submit"
-                                            [disabled]=isdesable
-                                            (click)="addScheduler1Config(userRegistrationForm)">Submit</button>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <h4>Scheduler 2</h4>
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Select Time</mat-label>
-                                            <mat-select name="SchedulerTime2" [disabled]=isdesable
-                                                [(ngModel)]="schedulerData.SchedulerTime2">
-                                                <mat-option *ngFor="let food of foods1" [value]="food">
-                                                    {{food}}
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <br />
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Tables</mat-label>
-                                            <mat-select multiple name="Table2" [disabled]=isdesable
-                                                [(ngModel)]="schedulerData.Table2">
-                                                <mat-option *ngFor="let topping of toppingList"
-                                                    [value]="topping">{{topping}}</mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <button class="custom-btn" style="margin-right: 110px;" type="submit"
-                                            [disabled]=isdesable
-                                            (click)="addScheduler2Config(userRegistrationForm)">Submit</button>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <h4>Scheduler 3</h4>
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Select Time</mat-label>
-                                            <mat-select name="SchedulerTime3" [disabled]=isdesable
-                                                [(ngModel)]="schedulerData.SchedulerTime3">
-                                                <mat-option *ngFor="let food of foods2" [value]="food">
-                                                    {{food}}
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <br />
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Tables</mat-label>
-                                            <mat-select multiple name="Table3" [disabled]=isdesable
-                                                [(ngModel)]="schedulerData.Table3">
-                                                <mat-option *ngFor="let topping of toppingList"
-                                                    [value]="topping">{{topping}}</mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <button class="custom-btn" style="margin-right: 110px;" type="submit"
-                                            [disabled]=isdesable
-                                            (click)="addScheduler3Config(userRegistrationForm)">Submit</button>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <h4>Sync Now</h4>
-                                        <label>
-                                            Date Time:
-                                        </label>
-                                        <!-- <angular2-date-picker [(ngModel)]="date" [settings]="settings"
-                                        name="dd"></angular2-date-picker> -->
+                                    <!-- tabs code start here -->
+                                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start"
+                                        (selectedTabChange)="tabChanged($event)">
+                                        <mat-tab class="tab-border" label="Scheduler">
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>Full Data Migration</h4>
+                                                    <mat-form-field style="">
+                                                        <mat-label>Select Time</mat-label>
+                                                        <mat-select name="SchedulerTime1" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.SchedulerTime1">
+                                                            <mat-option *ngFor="let food of foods" [value]="food">
+                                                                {{food}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
 
-                                        <mat-form-field style="width:80%;">
-                                            <mat-label>Tables</mat-label>
-                                            <mat-select multiple name="Table4" [(ngModel)]="schedulerData.Table4">
-                                                <mat-option *ngFor="let topping of toppingList"
-                                                    [value]="topping">{{topping}}</mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    [disabled]=isdesable
+                                                    (click)="addScheduler1Config(userRegistrationForm)">Submit</button>
+                                            </div>
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>Scheduler 2</h4>
+                                                    <mat-form-field>
+                                                        <mat-label>Select Time</mat-label>
+                                                        <mat-select name="SchedulerTime2" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.SchedulerTime2">
+                                                            <mat-option *ngFor="let food of foods1" [value]="food">
+                                                                {{food}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                    <mat-form-field>
+                                                        <mat-label>Tables</mat-label>
+                                                        <mat-select multiple name="Table2" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.Table2">
+                                                            <mat-option *ngFor="let topping of toppingList"
+                                                                [value]="topping">{{topping}}</mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    [disabled]=isdesable
+                                                    (click)="addScheduler2Config(userRegistrationForm)">Submit</button>
+                                            </div>
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>Scheduler 3</h4>
+                                                    <mat-form-field>
+                                                        <mat-label>Select Time</mat-label>
+                                                        <mat-select name="SchedulerTime3" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.SchedulerTime3">
+                                                            <mat-option *ngFor="let food of foods2" [value]="food">
+                                                                {{food}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                    <mat-form-field>
+                                                        <mat-label>Tables</mat-label>
+                                                        <mat-select multiple name="Table3" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.Table3">
+                                                            <mat-option *ngFor="let topping of toppingList"
+                                                                [value]="topping">{{topping}}</mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    [disabled]=isdesable
+                                                    (click)="addScheduler3Config(userRegistrationForm)">Submit</button>
+                                            </div>
+                                        </mat-tab>
+                                        <mat-tab class="tab-border" label="Sync Now">
 
-                                        <button class="custom-btn" style="margin-right: 110px;" type="submit"
-                                            (click)="syncTblNow()">Submit</button>
-                                    </div>
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>Date Time</h4>
+                                                    <!-- <label>
+                                                        Date Time:
+                                                    </label> -->
+                                                    <!-- <angular2-date-picker [(ngModel)]="date" [settings]="settings"
+                                                name="dd"></angular2-date-picker> -->
+
+                                                    <!-- <label class="control-label">Date Time:</label> -->
+                                                    <input type="datetime-local" name="SyncNowDate"
+                                                        #SyncNowDate="ngModel" [(ngModel)]="date" class="validate"
+                                                        required class="form-control custom-datepicker-mui">
+
+                                                    <mat-form-field>
+                                                        <mat-label>Tables</mat-label>
+                                                        <mat-select multiple name="Table4"
+                                                            [(ngModel)]="schedulerData.Table4">
+                                                            <mat-option *ngFor="let topping of toppingList"
+                                                                [value]="topping">{{topping}}</mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    (click)="syncTblNow()">Submit</button>
+                                            </div>
+                                        </mat-tab>
+                                        <mat-tab class="tab-border" label="Process">
+                                            <div class="col-md-12 button-grid">
+                                                <button *ngIf="userType!='Client'" (click)="back()"
+                                                    class="custom-white-btn">Back</button>
+
+                                                <button (click)="CompressAllImages()" class="custom-btn">Compress
+                                                    Images</button>
+                                                <button (click)="TreeImages()" class="custom-btn">Tree Images
+                                                    Sync</button>
+                                                <button (click)="AllTreeImages()" class="custom-btn">All Tree Images
+                                                    Sync</button>
+                                                <button (click)="ProductImages()" class="custom-btn">Products Images
+                                                    Sync</button>
+                                                <button (click)="AllProductImages()" class="custom-btn">All Products
+                                                    Images
+                                                    Sync</button>
+                                                <button (click)="SyncNow()" class="custom-btn">Full Data Sync</button>
+                                            </div>
+                                        </mat-tab>
+                                    </mat-tab-group>
+
+
+
+
+                                   
+
                                 </div>
 
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <button *ngIf="userType!='Client'" (click)="back()"
-                                            class="custom-white-btn">Back</button>
-
-                                        <button (click)="CompressAllImages()" class="custom-btn">Compress
-                                            Images</button>
-                                        <button (click)="TreeImages()" class="custom-btn">Tree Images
-                                            Sync</button>
-                                        <button (click)="AllTreeImages()" class="custom-btn">All Tree Images
-                                            Sync</button>
-                                        <button (click)="ProductImages()" class="custom-btn">Products Images
-                                            Sync</button>
-                                        <button (click)="AllProductImages()" class="custom-btn">All Products
-                                            Images
-                                            Sync</button>
-                                        <button (click)="SyncNow()" class="custom-btn">Full Data Sync</button>
-                                    </div>
-                                </div>
-                                <div class="clearfix"></div>
+                                
                             </form>
                         </div>
                     </div>
