--- a/AdminPortal/src/app/user-management/safiltersortlist/Deletesafiltersort.html
+++ b/AdminPortal/src/app/user-management/safiltersortlist/Deletesafiltersort.html
@@ -3,8 +3,8 @@
   <p>Are you sure want to delete this record?</p>
 </div>
 <div mat-dialog-actions>
-  <button class="btn btn-defaut" (click)="onNoClick()">No Thanks</button>
-  <button class="btn btn-danger" (click)="onYesClick(data.memRefNo,data.linkid)" style="margin-left:10px">Yes</button>
+  <button class="custom-white-btn" (click)="onNoClick()">No Thanks</button>
+  <button class="custom-btn" (click)="onYesClick(data.memRefNo,data.linkid)" style="margin-left:10px">Yes</button>
 </div>
 
 
